選擇目標市場程式實作 新增資料來源

--- a/contract/選擇目標市場程式實作.ipynb
+++ b/contract/選擇目標市場程式實作.ipynb
@@ -44,6 +44,8 @@
     "\n",
     "## 資料\n",
     "\n",
+    "可以從此[下載資料](https://github.com/HowardNTUST/Marketing-Data-Science-Application/blob/master/contract/contract.csv)\n",
+    "\n",
     "### 目標變數（或稱依變數）：\n",
     "購買與否：每一客戶對P 商品的購買狀態，購買=1；未購買 = 0。\n",
     "\n",
