STP資料科學_系列2 修改標題

--- a/當STP「行銷策略」遇到資料科學/STP資料科學_系列2-【資料蒐集】 Python網路爬蟲專案導向教學/STP資料科學_系列2-【資料蒐集】 Python網路爬蟲專案導向教學.ipynb
+++ b/當STP「行銷策略」遇到資料科學/STP資料科學_系列2-【資料蒐集】 Python網路爬蟲專案導向教學/STP資料科學_系列2-【資料蒐集】 Python網路爬蟲專案導向教學.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align:center\"><span style=\"font-size:1.2cm; line-height: 1.5cm; \">當STP「行銷策略」遇到資料科學</span><br></div>\n",
+    "# <div style=\"text-align:center\"><span style=\"font-size:1.2cm; line-height: 1.5cm; \">當STP「行銷策略」遇到資料科學</span><br></div>\n",
     "\n",
-    "<div style=\"text-align:center\"><span style=\"font-size:1.2cm; line-height: 1.5cm; \">系列2-【資料蒐集】 Python網路爬蟲專案導向教學</span><br></div>"
+    "# <div style=\"text-align:center\"><span style=\"font-size:1.2cm; line-height: 1.5cm; \">系列2-【資料蒐集】 Python網路爬蟲專案導向教學</span><br></div>"
    ]
   },
   {
