STP資料科學_系列2 標題修改階層

--- a/當STP「行銷策略」遇到資料科學/STP資料科學_系列2-【資料蒐集】 Python網路爬蟲專案導向教學/STP資料科學_系列2-【資料蒐集】 PTT貼文爬取模組.ipynb
+++ b/當STP「行銷策略」遇到資料科學/STP資料科學_系列2-【資料蒐集】 Python網路爬蟲專案導向教學/STP資料科學_系列2-【資料蒐集】 PTT貼文爬取模組.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <div style=\"text-align:center\"><span style=\"font-size:1.2cm; line-height: 1.5cm; \">當STP「行銷策略」遇到資料科學</span><br></div>\n",
-    "\n",
-    "# <div style=\"text-align:center\"><span style=\"font-size:1.2cm; line-height: 1.5cm; \">系列2-【資料蒐集】 Python網路爬蟲專案導向教學 - PTT貼文爬取模組</span><br></div>"
+    "# 當STP「行銷策略」遇到資料科學\n",
+    "## 系列2-【資料蒐集】 Python網路爬蟲專案導向教學 - PTT貼文爬取模組"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 作者：鍾皓軒（臺灣行銷研究有限公司創辦人）\n",
+    "作者：鍾皓軒（臺灣行銷研究有限公司 創辦人）\n",
     "\n",
-    "### Python jupyter notebook整理作者：陳俊凱（臺灣行銷研究特邀整理作者）、孔慶媛（臺灣行銷研究特邀整理作者）\n",
-    "## 完整文章介紹[鏈接]()【文章修改中，之後準備發表】\n"
+    "Python jupyter notebook整理作者：陳俊凱（臺灣行銷研究特邀整理作者）、孔慶媛（臺灣行銷研究特邀整理作者）\n",
+    "\n",
+    "完整文章介紹[鏈接]()【文章修改中，之後準備發表】"
    ]
   },
   {
