--- a/Python 0到1 商務應用與實作的最強實戰指南(I)/CH2-8_徐子皓_串列操作 - 商務資料操作必學.ipynb
+++ b/Python 0到1 商務應用與實作的最強實戰指南(I)/CH2-8_徐子皓_串列操作 - 商務資料操作必學.ipynb
@@ -31,7 +31,7 @@
   {
    "source": [
     "#### 作者：徐子皓(臺灣行銷研究特邀作者)\n",
-    "#### 完整文章介紹鏈接：https://reurl.cc/od7vn5"
+    "#### 完整文章介紹鏈接：https://medium.com/p/b94eec7acbf4/"
    ],
    "cell_type": "markdown",
    "metadata": {}
