--- a/Python 0到1 商務應用與實作的最強實戰指南(I)/CH2-12_徐子皓_For迴圈操作－解決重複作業的大功臣.ipynb
+++ b/Python 0到1 商務應用與實作的最強實戰指南(I)/CH2-12_徐子皓_For迴圈操作－解決重複作業的大功臣.ipynb
@@ -31,7 +31,7 @@
   {
    "source": [
     "#### 作者：徐子皓(臺灣行銷研究特邀作者)\n",
-    "#### 完整文章介紹鏈接："
+    "#### 完整文章介紹鏈接：https://medium.com/p/eec7077f0f47/"
    ],
    "cell_type": "markdown",
    "metadata": {}
