--- a/Python 0到1 商務應用與實作的最強實戰指南(I)/CH2-10_徐子皓_Pandas DataFrame - 資料處理與轉換的重要好夥伴.ipynb
+++ b/Python 0到1 商務應用與實作的最強實戰指南(I)/CH2-10_徐子皓_Pandas DataFrame - 資料處理與轉換的重要好夥伴.ipynb
@@ -31,7 +31,7 @@
   {
    "source": [
     "#### 作者：徐子皓(臺灣行銷研究特邀作者)\n",
-    "#### 完整文章介紹鏈接："
+    "#### 完整文章介紹鏈接：https://medium.com/p/de4bde2d4463/"
    ],
    "cell_type": "markdown",
    "metadata": {}
