--- a/Python 0到1 商務應用與實作的最強實戰指南(I)/CH4-22_徐子皓_單因子變異數分析 - Python實戰：如何決定多廣告的優化策略？.ipynb
+++ b/Python 0到1 商務應用與實作的最強實戰指南(I)/CH4-22_徐子皓_單因子變異數分析 - Python實戰：如何決定多廣告的優化策略？.ipynb
@@ -31,7 +31,7 @@
   {
    "source": [
     "#### 作者：徐子皓(臺灣行銷研究特邀作者)\n",
-    "#### 完整文章介紹鏈接："
+    "#### 完整文章介紹鏈接：https://medium.com/p/7c99643043b0/"
    ],
    "cell_type": "markdown",
    "metadata": {}
