--- a/如何 0-1 來預測新酒品的市場趨勢/wine_part01_code.ipynb
+++ b/如何 0-1 來預測新酒品的市場趨勢/wine_part01_code.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "###### 「品酒」已經不再是有錢人的權利，在這個美酒當道的年代，我們要如何像 Somm 電影的品酒師，一口就能辨別出「口感」、「年份」、「產地」，甚至預測下一季爆款的酒呢？\n",
     "\n",
-    "###### 原始檔案請見[本連結](https://www.kaggle.com/code/dodsonhuang/learning-how-to-plot-and-eda/notebook)"
+    "###### 原始檔案請見[本連結](https://drive.google.com/drive/u/2/folders/1heSaQTTt1jsI1tnIWgpr1NF6kb_G85_I)"
    ]
   },
   {
